Fixed homepage url  On branch main  Changes to be committed: 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://r6-randomizer.github.io/r6-randomizer/",
+  "homepage": "https://predador2000ori.github.io/r6-randomizer/",
   "name": "r6-randomizer",
   "version": "0.1.0",
   "private": true,
